--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.4
+Date: 06. 08. 2020
+  Updates:
+    - Updated Russian locale for AAI Industry v0.4.15 (Shadow_Man)
+    - Updated Russian locale for AAI Programmable Structures v0.6.3 (Shadow_Man)
+    - Updated Russian locale for AAI Programmable Vehicles v0.6.10 (Shadow_Man)
+    - Updated Russian locale for AAI Zones v0.5.2 (Shadow_Man)
+
+---------------------------------------------------------------------------------------------------
 Version: 0.1.3
 Date: 22. 05. 2020
   Features:
