--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+Version: 1.1.6
+Date: 29. 11. 2020
+  Updates:
+    - Updated Russian locale for AAI Industry v0.5.2 (Shadow_Man)
+
+---------------------------------------------------------------------------------------------------
 Version: 1.1.5
 Date: 24. 11. 2020
   Features:
