--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,11 @@
-Version: 1.1.7
+Version: 1.1.8
 Date: 04. 12. 2020
+  Updates:
+    - Updated Russian locale for AAI Containers & Warehouses v0.2.5 (Shadow_Man)
+
+---------------------------------------------------------------------------------------------------
+Version: 1.1.7
+Date: 03. 12. 2020
   Updates:
     - Updated Russian locale for AAI Containers & Warehouses v0.2.3 (Shadow_Man)
 
