--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+Version: 1.1.9
+Date: 19. 02. 2021
+  Updates:
+    - Updated Russian locale for AAI Industry v0.5.4 (Shadow_Man)
+
+---------------------------------------------------------------------------------------------------
 Version: 1.1.8
 Date: 04. 12. 2020
   Updates:
