--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+---------------------------------------------------------------------------------------------------
+Version: 1.1.10
+Date: 05. 10. 2021
+  Updates:
+    - Updated Russian locale for AAI Containers & Warehouses v0.2.9 (Shadow_Man)
+    - Updated Russian locale for AAI Industry v0.5.9 (Shadow_Man)
+    - Updated Russian locale for AAI Programmable Vehicles v0.7.14 (Shadow_Man)
+    - Added mod icon (Shadow_Man)
+
+---------------------------------------------------------------------------------------------------
 Version: 1.1.9
 Date: 19. 02. 2021
   Updates:
